# libui-rubiks-demo

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt
docs/: Build-on-Linux.md  Build-on-Mac.md  Build-on-Windows.md  README.md
include/: geometry.hpp  rubiks.hpp  rubiks_handler.hpp
presets/: release.ini
src/: app.manifest  main.cpp
subprojects/: libui.wrap
subprojects/packagefiles/: libui.diff
